--- a/lab-hyper-tuning.ipynb
+++ b/lab-hyper-tuning.ipynb
@@ -221,11 +221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "spaceship.dropna(inplace=True)\n",
+    "spaceship[\"Cabin\"] = spaceship['Cabin'].astype(str).str[0]\n",
+    "spaceship.drop([\"PassengerId\"], axis =1, inplace=True)\n",
+    "spaceship.drop([\"Name\"], axis =1, inplace=True)\n",
+    "spaceship = pd.get_dummies(spaceship, columns=[\"HomePlanet\", \"Cabin\", \"Destination\"])\n",
+    "\n",
+    "\n",
+    "target = spaceship['Age']\n",
+    "features = spaceship.drop(['Age'], axis = 1)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size = 0.20, random_state=0)\n"
    ]
   },
   {
@@ -237,11 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor, RandomForestRegressor,AdaBoostRegressor, GradientBoostingRegressor\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "bagging_reg = BaggingRegressor(DecisionTreeRegressor(max_depth=20),\n",
+    "                               n_estimators=100,\n",
+    "                               max_samples=1000)\n",
+    "\n",
+    "bagging_reg.fit(X_train, y_train)\n",
+    "pred = bagging_reg.predict(X_test)"
    ]
   },
   {
@@ -253,11 +276,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE 10.224438195730027\n",
+      "RMSE 13.090845983990272\n",
+      "R2 score 0.1819751723547285\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Data_analyst\\Ironhack\\Anaconda\\Lib\\site-packages\\sklearn\\metrics\\_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "print(\"MAE\", mean_absolute_error(pred, y_test))\n",
+    "print(\"RMSE\", mean_squared_error(pred, y_test, squared=False))\n",
+    "print(\"R2 score\", bagging_reg.score(X_test, y_test))"
    ]
   },
   {
@@ -283,11 +327,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "#your code here\n",
+    "grid = {\"n_estimators\": [50, 100, 200,500],\n",
+    "        \"estimator__max_leaf_nodes\": [250, 500, 1000, None],\n",
+    "        \"estimator__max_depth\":[10,30,50]}"
    ]
   },
   {
@@ -302,7 +349,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "bag_reg = BaggingRegressor(DecisionTreeRegressor())\n",
+    "model = GridSearchCV(estimator = bag_reg, param_grid = grid, cv=5)\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.best_params_"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,12 +378,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import r2_score, mean_absolute_error, root_mean_squared_error\n",
+    "pred = bag_reg.predict(X_test)\n",
+    "\n",
+    "print(\"MAE\", mean_absolute_error(pred, y_test))\n",
+    "print(\"RMSE\", root_mean_squared_error(pred, y_test))\n",
+    "print(\"R2 score\", bag_reg.score(X_test, y_test))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -335,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
